--- a/.own_navi.example
+++ b/.own_navi.example
@@ -6,9 +6,21 @@
 
 # 名称
 TITLE="子目录显示名称"
+
 # 标记 hot vip new recommend
 MARK=new
 
+# 组
+GROUP="导航"
+
+# 隐藏
+# 注意：隐藏后入口将不在导航中显示，但手动输入路径依然可以进入
+HIDDEN=NO
+
+# 入口文件
+# 仅使用相对路径，相对于此配置文件所在目录（省略./）
+# NO表示自动寻找默认文件
+ENTRY=""
 
 # ---------------------------------------------------
 # 以下内容不建议非专业用户修改
@@ -16,4 +28,4 @@ MARK=new
 # ---------------------------------------------------
 
 # 配置文件版本
-CONF_VERSION=1
+CONF_VERSION=2
